--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+body{
+    margin: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul{
+    padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul li{
+    list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container{
+    display: flex;
+
+    
 }
 
-.App-link {
-  color: #61dafb;
+.main{
+    flex-basis: 60%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.items-list{
+    width: 100%;
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.item{
+    cursor: pointer;
+    background-color: rgb(255, 204, 109);
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin: 0.5rem;    
+}
+
+.item:hover{
+    background-color: rgb(255, 169, 89);
+}
+
+.item-cancel{
+    cursor: pointer;
+    margin-left: 0.5rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: rgb(150, 150, 150)
+}
+
+.item-cancel:hover{
+    color: black;
+}
+
+.selected-area{
+    flex-basis: 40%;
 }
