--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,19 @@ ul li{
     border-radius: 10px;
     padding: 0.5rem;
     margin: 0.5rem;    
+    display: none;
 }
 
 .item:hover{
     background-color: rgb(255, 169, 89);
+}
+
+.item.selected{
+    background-color: rgb(255, 169, 89);
+}
+
+.item.active{
+    display: block;
 }
 
 .item-cancel{
