apply Loading sign when api loading

--- a/src/component/Loading.module.css
+++ b/src/component/Loading.module.css
@@ -3,6 +3,7 @@
     width: 100px;
     height: 100px;
     animation: animateBg 7s linear infinite;
+    transform: scale(0.5);
 }
 
 @keyframes animateBg{
