--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ ul li{
     position: relative;
     width: 100%;
     height: 60vh;
-    margin: 3rem 0;
+    margin-bottom: 3rem;
     color: black;
 }
 
@@ -63,6 +63,7 @@ ul li{
 
 .container .search{
     display: flex;
+    width: 100%;
 }
 
 .main{
@@ -166,7 +167,7 @@ ul li{
     width: 48%;
 }
 
-.blog{
+.card{
     height: 175px;
     cursor: pointer;    
     padding: 0.5rem 1rem;
@@ -174,9 +175,10 @@ ul li{
     -webkit-box-shadow: 5px 5px 14px 3px #898989; 
     box-shadow: 5px 5px 10px 3px #898989;
     transition: all 200ms ease;
+    border-radius: 10px;
 }
 
-.blog:hover{
+.card:hover{
     transform: translate(-2px, -1px)
 }
 
@@ -202,13 +204,6 @@ ul li{
 
 .video{
     display: flex;
-    height: 175px;
-    cursor: pointer;    
-    padding: 0.5rem 1rem;
-    margin-bottom: 1rem;
-    -webkit-box-shadow: 5px 5px 14px 3px #898989; 
-    box-shadow: 5px 5px 10px 3px #898989;
-    transition: all 200ms ease;
 }
 
 .video .video_desc{
